--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navBar navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="fullNavBar navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container d-flex justify-content-between">
             <!-- Logo -->
             <a class="navbar-brand" href="#"><img src="img/logo.png" width="140px" alt=""></a>
@@ -56,9 +56,26 @@
                     <a class="nav-link fs-4" href="#" id="searchDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-search text-white"></i>
                     </a>
-                    <div class="dropdownMenu dropdown-menu dropdown-menu-end" aria-labelledby="searchDropdown" style="width: 200px;">
-                        <form class="p-2 w-100">
-                            <input class="form-control" type="search" placeholder="Search movies...." aria-label="Search">
+                    <div class="dropdownMenu searchDropDown dropdown-menu dropdown-menu-end p-1 rounded-5 border-primary" aria-labelledby="searchDropdown" style="width: 300px; background-color: rgba(234, 237, 236, 0.854);">
+                        <form class="w-100 position-relative rounded-5" >
+                            <div class="input-group rounded-5">
+
+                                <input class="form-control input m-0 p-1 rounded-5 pe-3 border-0" 
+                                type="search" id="search-input"
+                                placeholder="Search movies..." 
+                                aria-label="Search" name="search" style=" background-color: rgba(0, 0, 0, 0);">
+
+                                <div class="searchAllBtns d-flex align-items-center">
+                                    <button id="clear-btn" class="btn position-absolute end-0 p-0" type="button" style="display: none; margin-right: 43px; z-index: 5;">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </button>
+
+                                    <button class="btn search-btn btn-danger rounded-5 " type="submit" name="search">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -84,14 +101,25 @@
                         <h1 class="display-4 heroTitleText  fw-bolder" style="font-size: 54px; color: aliceblue !important;">Unlimited movies, TV <br> shows, and more</h1>
                         <p class="mt-3">Ready to watch? Enter your email to create or restart your membership.</p>
                         <div class="input-group mt-4 mb-2 w-100 w-lg-75 ">
-                            <input type="email" class="form-control focus-ring p-3" placeholder="Enter your email address" aria-label="Email address">
+                            <input type="email" class="form-control input p-3" placeholder="Enter your email address" aria-label="Email address">
                             <button class="btn text-white" type="button" style="background-color: rgb(129, 4, 4);">Get Started <i class="fa-solid fa-angle-right"></i></button>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-12  pt-lg-4">
+                    <div class="col-lg-4 col-md-12 pt-lg-4">
                         <!-- Bootstrap Carousel Slider -->
-                        <div id="heroSlider" class="carousel slide" data-bs-ride="carousel">
+                        <div id="heroSlider" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
+                            <!-- Indicators -->
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="0" class="active" aria-current="true"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="1"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="2"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="3"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="4"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="5"></button>
+                                <button type="button" data-bs-target="#heroSlider" data-bs-slide-to="6"></button>
+                            </div>
+                            
                             <div class="carousel-inner">
                                 <div class="carousel-item active sliderImg">
                                     <img src="img/poster/moneyHeist.jpg" class="d-block rounded-4 w-100" alt="moneyHeist">
@@ -111,9 +139,9 @@
                                 <div class="carousel-item sliderImg">
                                     <img src="img/poster/squidGames.jpg" class="d-block rounded-4 w-100" alt="squidGames">
                                 </div>
-                                    <div class="carousel-item sliderImg">
-                                        <img src="img/poster/animal.jpg" class="d-block rounded-4 w-100" alt="animal">
-                                    </div>
+                                <div class="carousel-item sliderImg">
+                                    <img src="img/poster/animal.jpg" class="d-block rounded-4 w-100" alt="animal">
+                                </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#heroSlider" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
