--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
             <!-- Navbar Links - Hidden on mobile -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav m-auto">
-                    <li class="nav-item px-1 py-4">
-                        <a class="nav-link px-4 active" href="index.html">Home</a>
+                    <li class="nav-item px-1 ">
+                        <a class="nav-link p-4 active" href="index.html">Home</a>
                     </li>
                     <!-- Categories Dropdown -->
-                    <li class="nav-item px-1 dropdown py-4">
-                        <a class="nav-link px-4 dropdown-toggle" href="#" id="categoriesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item px-1 dropdown">
+                        <a class="nav-link p-4  dropdown-toggle" href="#" id="categoriesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Categories
                         </a>
                         <ul class="dropdown-menu bg-black " aria-labelledby="categoriesDropdown">
-                            <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Action</a></li>
-                            <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Comedy</a></li>
-                            <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Drama</a></li>
-                            <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Horror</a></li>
-                            <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Romance</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Action</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Animation</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Comedy</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Drama</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Horror</a></li>
+                            <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Romance</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item px-1 py-4">
-                        <a class="nav-link px-4" href="#">Trending</a>
+                    <li class="nav-item px-1">
+                        <a class="nav-link p-4" href="#">Request Movie</a>
                     </li>
-                    <li class="nav-item px-1 py-4">
-                        <a class="nav-link px-4" href="#">My List</a>
+                    <li class="nav-item px-1">
+                        <a class="nav-link p-4" href="#">My List</a>
                     </li>
                 </ul>
             </div>
@@ -103,34 +104,35 @@
 
         <div class="drawer-content p-3 bg-dark">
             <ul class="navbar-nav">
-                <li class="nav-item py-2 my-2 border-bottom border-white">
-                    <a class="nav-link active" href="index.html">Home</a>
+                <li class="nav-item border-bottom border-white">
+                    <a class="nav-link py-3 active" href="index.html">Home</a>
                 </li>
-                <li class="nav-item py-2 dropdown my-2 border-bottom border-white">
-                    <a class="nav-link dropdown-toggle" href="#" id="mobileCategoriesDropdown" role="button" data-bs-toggle="dropdown">
+                <li class="nav-item dropdown border-bottom border-white">
+                    <a class="nav-link  py-3 dropdown-toggle" href="#" id="mobileCategoriesDropdown" role="button" data-bs-toggle="dropdown">
                         Categories
                     </a>
-                    <ul class="dropdown-menu bg-black" aria-labelledby="mobileCategoriesDropdown">
-                        <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Action</a></li>
-                        <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Comedy</a></li>
-                        <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Drama</a></li>
-                        <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Horror</a></li>
-                        <li><a class="dropdown-item text-white dropdownMenuItems" href="#">Romance</a></li>
+                    <ul class="dropdown-menu bg-black " aria-labelledby="categoriesDropdown">
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Action</a></li>
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Animation</a></li>
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Comedy</a></li>
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Drama</a></li>
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Horror</a></li>
+                        <li><a class="dropdown-item text-white dropdownMenuItems" href="movie.html">Romance</a></li>
                     </ul>
                 </li>
-                <li class="nav-item py-2 my-2 border-bottom border-white">
-                    <a class="nav-link" href="#">Trending</a>
+                <li class="nav-item border-bottom border-white">
+                    <a class="nav-link  py-3" href="#">Request Movie</a>
                 </li>
-                <li class="nav-item py-2 my-2 border-bottom border-white">
-                    <a class="nav-link" href="#">My List</a>
+                <li class="nav-item border-bottom border-white">
+                    <a class="nav-link  py-3" href="#">My List</a>
                 </li>
             </ul>
         </div>
     </div>
     <!-- Navbar -->
-    <div class="overlay">
 
-<main>
+<div class="overlay">
+<main class="position-relative">
     <!-- Hero Section start-->
     <section class="hero-section mt-5 pt-3 px-4 px-lg-0">
         <div class="container">
@@ -144,8 +146,8 @@
                           <!-- Movie Box -->
                           <div class="col-6 col-lg-3">
                             <a href="#allContentSection" class="text-decoration-none">
-                              <div class="text-center rounded-4 py-4 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
-                                   style="background-color: rgba(3, 173, 88, 0.6); height: 150px;">
+                              <div class="text-center rounded-2 py-4 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
+                                   style="background-color: rgba(255, 0, 0, 0.6); height: 150px;">
                                 <h3 class="mb-1 text-white">MOVIES</h3>
                                 <h2 class="mb-0 text-white"><span class="count" data-target="1500">0</span>+</h2>
                               </div>
@@ -155,7 +157,7 @@
                           <!-- Web Series Box -->
                           <div class="col-6 col-lg-3">
                             <a href="#allContentSection" class="text-decoration-none" >
-                              <div class="text-center py-4 rounded-4 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
+                              <div class="text-center py-4 rounded-2 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
                                    style="background-color: rgba(148, 10, 202, 0.454); height: 150px;">
                                 <h3 class="mb-1 text-white">WEB SERIES</h3>
                                 <h2 class="mb-0 text-white"><span class="count" data-target="800">0</span>+</h2>
@@ -166,8 +168,8 @@
                           <!-- Drama Box -->
                           <div class="col-6 col-lg-3">
                             <a href="#allContentSection" class="text-decoration-none">
-                              <div class="text-center py-4 rounded-4 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
-                                   style="background-color: rgba(255, 7, 152, 0.6); height: 150px;">
+                              <div class="text-center py-4 rounded-2 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
+                                   style="background-color: rgba(133, 137, 133, 0.6); height: 150px;">
                                 <h3 class="mb-1 text-white">DRAMA</h3>
                                 <h2 class="mb-0 text-white"><span class="count" data-target="150">0</span>+</h2>
                               </div>
@@ -177,8 +179,8 @@
                           <!-- More Box -->
                           <div class="col-6 col-lg-3">
                             <a href="#allContentSection" class="text-decoration-none">
-                              <div class="text-center py-4 rounded-4 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
-                                   style="background-color: rgba(135, 107, 25, 0.6); height: 150px;">
+                              <div class="text-center py-4 rounded-2 d-flex flex-column justify-content-center align-items-center h-100 hoverForContentBox" 
+                                   style="background-color: rgba(8, 181, 169, 0.6); height: 150px;">
                                 <h3 class="mb-0 text-white">MORE...</h3>
                               </div>
                             </a>
@@ -245,8 +247,8 @@
         <div class="container mt-5">
             <!-- Latest Movies Section -->
             <div class="movie-section">
-                <h1 class="m-auto text-center p-2 fw-bold my-5 border-bottom border-light w-50">Popular Movies</h1>
-                <div class="row " style="--bs-gutter-x: 10px;">
+                <h1 class="m-auto text-center p-2 fw-bold my-5  w-100"><span class="border-start border-end border-danger border-3 px-2">All Contents</span></h1>
+                <div class="row ">
                     <!-- Movie Card 1 -->
                     <div class="col-md-2 col-6">
                         <a href="#">
