--- a/index.html
+++ b/index.html
@@ -651,8 +651,8 @@
 </main>
 
 <!-- Back to Top Button -->
-<button id="backToTop" class="back-to-top-btn" aria-label="Back to Top">
-    <i class="fas fa-arrow-up"></i>
+<button id="backToTop" class="back-to-top-btn" aria-label="Back to top">
+  <i class="fas fa-arrow-up"></i>
 </button>
 
 </div>
