--- a/myList.html
+++ b/myList.html
@@ -610,10 +610,9 @@
 </main>
 
 <!-- Back to Top Button -->
-<button id="backToTop" class="back-to-top-btn" aria-label="Back to Top">
+<button id="backToTop" class="back-to-top-btn" aria-label="Back to top">
     <i class="fas fa-arrow-up"></i>
-</button>
-
+</button>  
 </div>
     <!-- Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
