--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Trending</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">New Releases</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Request Movie</a></li>
+                        <li class="mb-2"><a href="uploadMovie.html" class="text-white text-decoration-none">Upload Movie</a></li>
                     </ul>
                 </div>
     
