--- a/index.html
+++ b/index.html
@@ -582,9 +582,9 @@
 
 
     <!-- footer section start  -->
-    <footer class="footer bg-dark text-white pt-5 pb-4 mt-5">
-        <div class="container">
-            <div class="row">
+    <footer class="footer bg-dark text-white pt-5 pb-4 mt-5 ">
+        <div class="container ">
+            <div class="row ">
                 <!-- Website Info -->
                 <div class="col-md-4 mb-4">
                     <a class="navbar-brand d-block mb-3" href="index.html">
@@ -607,7 +607,7 @@
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Trending</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">New Releases</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Request Movie</a></li>
+                        <li class="mb-2"><a href="requestMovie.html" class="text-white text-decoration-none">Request Movie</a></li>
                         <li class="mb-2"><a href="uploadMovie.html" class="text-white text-decoration-none">Upload Movie</a></li>
                     </ul>
                 </div>
