--- a/movie.html
+++ b/movie.html
@@ -770,10 +770,11 @@
                 <div class="col-md-2 col-6 mb-4">
                     <h5 class="text-danger mb-4">Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Home</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Trending</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">New Releases</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Request Movie</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                        <li class="mb-2"><a href="movie.html" class="text-white text-decoration-none">Trending</a></li>
+                        <li class="mb-2"><a href="movie.html" class="text-white text-decoration-none">New Releases</a></li>
+                        <li class="mb-2"><a href="requestMovie.html" class="text-white text-decoration-none">Request Movie</a></li>
+                        <li class="mb-2"><a href="uploadMovie.html" class="text-white text-decoration-none">Upload Movie</a></li>
                     </ul>
                 </div>
     
