--- a/uploadMovie.html
+++ b/uploadMovie.html
@@ -443,7 +443,7 @@
                       <li class="mb-2"><a href="#" class="text-white text-decoration-none">Trending</a></li>
                       <li class="mb-2"><a href="#" class="text-white text-decoration-none">New Releases</a></li>
                       <li class="mb-2"><a href="requestMovie.html" class="text-white text-decoration-none">Request Movie</a></li>
-                      <li class="mb-2"><a href="php/view_pending_movie.php" class="text-white text-decoration-none">See Uploaded Movie</a></li>
+                      <li class="mb-2"><a href="php/view_pending_movies.php" class="text-white text-decoration-none">See Uploaded Movie</a></li>
                   </ul>
               </div>
   
